--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -6,14 +6,14 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ main ]
+    tags:
+      - v*
   pull_request:
     branches: [ main ]
 
 jobs:
-  build:
-
+  Compile:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
@@ -22,5 +22,45 @@ jobs:
         java-version: 1.8
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Compile with Gradle
+      run: |
+        ./gradlew compileJava
+        ./gradlew compileTestJava
+
+  Test:
+    runs-on: ubuntu-latest
+    needs: Compile
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Test with Gradle
+      run: ./gradlew test
+    - name: Upload test report
+      uses: actions/upload-artifact@v2
+      with:
+        name: testReport
+        path: build/reports
+
+  Assemble:
+    runs-on: ubuntu-latest
+    needs: [Compile, Test]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Assemble with Gradle
+      run: ./gradlew assemble
+    - name: Upload assembled jar file
+      uses: actions/upload-artifact@v2
+      with:
+        name: buildJar
+        path: build/libs
