--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -64,3 +64,24 @@ jobs:
       with:
         name: buildJar
         path: build/libs
+
+  Release:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    needs: [Compile, Test, Assemble]
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/download-artifact@v2
+      with:
+        name: buildJar
+        path: release
+    - id: outputReleaseName
+      name: Display structure of downloaded files
+      run: echo "jar_name=`ls`" >> $GITHUB_ENV
+      working-directory: release
+    - name: Release
+      uses: softprops/action-gh-release@v0.1.5
+      with:
+        files: release/${{ env.jar_name }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
