--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,17 @@ plugins {
     id 'java'
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'Main'
+        )
+    }
+    from {
+        configurations.compile.collect {it.isDirectory() ? it : zipTree(it)}
+    }
+}
+
 group 'org.example'
 version '1.0-SNAPSHOT'
 
